--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,210 +6,212 @@
     font-family: Ubuntu;
 }
 
-/* MAIN CSS */
+/* PC CSS */
 
-header {
-    height: 10vh;
-    display: flex;
-    color: white;
-    background: #504BE5;
-    justify-content: space-between;
-    text-align: left;
-    border-bottom: 1px solid lightgray;
+@media only screen and (min-width: 768px) {
+
+    header {
+        height: 10vh;
+        display: flex;
+        color: white;
+        background: #504BE5;
+        justify-content: space-between;
+        text-align: left;
+        border-bottom: 1px solid lightgray;
+    }
+
+    header div.logo {
+        padding: 3vh;
+        font-size: 1.3em;
+        font-weight: bold;
+    }
+
+    main {
+        display: flex;
+    }
+
+    main div.home {
+        height: 120vh;
+        width: 38vw;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column;
+        padding-left: 6vw;
+        padding-right: 6vw;
+        color: rgb(26, 27, 90);
+    }
+
+    main div.home h1 {
+        font-size: 3.2em;
+        font-weight: 900;
+    }
+
+    main div.home p {
+        color: rgb(137, 138, 177);
+        font-weight: 400;
+        font-size: 1.4em;
+    }
+
+    main div.survey-box {
+        width: 50vw;
+        height: 150vh;
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    main div.survey-box div.survey {
+        width: 40vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 20px;
+        background-color: white;
+        border: 0.5px solid rgba(0, 0, 0, 0.07);
+        border-radius: 10px;
+        font-size: 0.9em;
+        align-items: center;
+    }
+
+    main div.survey-box div.survey:hover {
+        -webkit-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.11);
+        -moz-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.11);
+        box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.11);
+    }
+
+    main div.survey-box div.survey div.input {
+        padding: 10px;
+        width: 30vw;
+    }
+
+    main div.survey-box div.survey input {
+        width: 30vw;
+        border: none;
+        border-bottom: 0.5px solid rgb(238, 238, 238);
+        padding: 5px;
+    }
+
+    main div.survey-box div.survey div.gender {
+        display: flex;
+        width: 30vw;
+        font-size: 0.8em;
+        padding: 5px;
+    }
+
+    main div.survey-box div.survey div.gender input {
+        width: 2vw;
+    }
+
+    main div.survey-box div.survey div.slider-box {
+        display: flex;
+        flex-direction: column;
+        width: 30vw;
+        align-content: center;
+        justify-content: center;
+        padding: 5px;
+        border: none;
+    }
+
+    main div.survey-box div.survey div.slider-box .slider-value {
+        color: #d3d3d3;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        border: none;
+    }
+
+    main div.survey-box div.survey div.slider-box .slider {
+        -webkit-appearance: none;
+        width: 99%;
+        height: 10px;
+        //    background: #d3d3d3;
+        outline: none;
+        border: none;
+        opacity: 0.7;
+        -webkit-transition: .2s;
+        transition: opacity .2s;
+    }
+
+    main div.survey-box div.survey div.slider-box .slider:hover {
+        opacity: 1;
+    }
+
+    main div.survey-box div.survey div.slider-box .slider::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 15px;
+        height: 15px;
+        border-radius: 15px;
+        background: #504BE5;
+        cursor: pointer;
+    }
+
+    main div.survey-box div.survey div.slider-box .slider::-moz-range-thumb {
+        width: 10px;
+        height: 10px;
+        background: #504BE5;
+        cursor: pointer;
+    }
+
+    main div.survey-box div.survey textarea {
+        width: 30vw;
+        border: 0.5px solid rgb(238, 238, 238);
+        border-radius: 5px;
+    }
+
+    main div.survey-box div.survey button {
+        border: none;
+        width: 10vw;
+        padding: 10px;
+        background-color: white;
+        font-size: 1em;
+        border: 0.8px solid #504BE5;
+        color: #504BE5;
+        border-radius: 35px;
+    }
+
+    main div.survey-box div.survey button:hover {
+        background-color: #504BE5;
+        color: white;
+        transition: background-color 1s;
+    }
+
+    footer {
+        width: 100%;
+        height: 20vh;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: #504BE5;
+    }
+
+    footer div {
+        text-align: center;
+        color: white;
+        padding: 5px;
+        width: 30vw;
+        font-size: 1.35em;
+        float: left;
+    }
+
+    footer div.links ol {
+        display: flex;
+        width: 30vw;
+        justify-content: space-evenly;
+    }
+
+    footer div.links ol a {
+        color: white;
+    }
+
+    footer div.links ol a:hover {
+        color: black;
+    }
+
 }
-
-header div.logo {
-    padding: 3vh;
-    font-size: 1.3em;
-    font-weight: bold;
-}
-
-main {
-    display: flex;
-}
-
-main div.home {
-    height: 120vh;
-    width: 38vw;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    flex-direction: column;
-    padding-left: 6vw;
-    padding-right: 6vw;
-    color: rgb(26, 27, 90);
-}
-
-main div.home h1 {
-    font-size: 3.2em;
-    font-weight: 900;
-}
-
-main div.home p {
-    color: rgb(137, 138, 177);
-    font-weight: 400;
-    font-size: 1.4em;
-}
-
-main div.survey-box {
-    width: 50vw;
-    height: 150vh;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-main div.survey-box div.survey {
-    width: 40vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 20px;
-    background-color: white;
-    border: 0.5px solid rgba(0, 0, 0, 0.07);
-    border-radius: 10px;
-    font-size: 0.9em;
-    align-items: center;
-}
-
-main div.survey-box div.survey:hover {
-    -webkit-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.11);
-    -moz-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.11);
-    box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.11);
-}
-
-main div.survey-box div.survey div.input {
-    padding: 10px;
-    width: 30vw;
-}
-
-main div.survey-box div.survey input {
-    width: 30vw;
-    border: none;
-    border-bottom: 0.5px solid rgb(238, 238, 238);
-    padding: 5px;
-}
-
-main div.survey-box div.survey div.gender {
-    display: flex;
-    width: 30vw;
-    font-size: 0.8em;
-    padding: 5px;
-}
-
-main div.survey-box div.survey div.gender input {
-    width: 2vw;
-}
-
-main div.survey-box div.survey div.slider-box {
-    display: flex;
-    flex-direction: column;
-    width: 30vw;
-    align-content: center;
-    justify-content: center;
-    padding: 5px;
-    border: none;
-}
-
-main div.survey-box div.survey div.slider-box .slider-value {
-    color: #d3d3d3;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    border: none;
-}
-
-main div.survey-box div.survey div.slider-box .slider {
-    -webkit-appearance: none;
-    width: 99%;
-    height: 10px;
-    //    background: #d3d3d3;
-    outline: none;
-    border: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-}
-
-main div.survey-box div.survey div.slider-box .slider:hover {
-    opacity: 1;
-}
-
-main div.survey-box div.survey div.slider-box .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 15px;
-    height: 15px;
-    border-radius: 15px;
-    background: #504BE5;
-    cursor: pointer;
-}
-
-main div.survey-box div.survey div.slider-box .slider::-moz-range-thumb {
-    width: 10px;
-    height: 10px;
-    background: #504BE5;
-    cursor: pointer;
-}
-
-main div.survey-box div.survey textarea {
-    width: 30vw;
-    border: 0.5px solid rgb(238, 238, 238);
-    border-radius: 5px;
-}
-
-main div.survey-box div.survey button {
-    border: none;
-    width: 10vw;
-    padding: 10px;
-    background-color: white;
-    font-size: 1em;
-    border: 0.8px solid #504BE5;
-    color: #504BE5;
-    border-radius: 35px;
-}
-
-main div.survey-box div.survey button:hover {
-    background-color: #504BE5;
-    color: white;
-    transition: background-color 1s;
-}
-
-footer {
-    width: 100%;
-    height: 20vh;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: #504BE5;
-}
-
-footer div {
-    text-align: center;
-    color: white;
-    padding: 5px;
-    width: 30vw;
-    font-size: 1.35em;
-    float: left;
-}
-
-footer div.links ol {
-    display: flex;
-    width: 30vw;
-    justify-content: space-evenly;
-}
-
-footer div.links ol a {
-    color: white;
-}
-
-footer div.links ol a:hover {
-    color: black;
-}
-
-
 
 
 /* RESPONSIVE CSS */
