--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,8 @@
 /*  CONTENTS 
         MAIN CSS
         RESPONSIVE CSS
+            TABLET (line no. 230)
+            MOBILE (line no. 414)
 
     HEADER
     MAIN
@@ -19,7 +21,7 @@
 
 /* PC CSS */
 
-@media only screen and (min-width: 768px) {
+@media (min-width: 1025px) and (max-width: 1280px) {
 
     header {
         height: 10vh;
@@ -226,6 +228,190 @@
 
 
 /* RESPONSIVE CSS */
+
+/* TABLET PART */
+@media only screen and (max-width: 1024px) {
+
+    header {
+        height: 10vh;
+        text-align: left;
+        border-bottom: 0.1px solid lightgray;
+        color: white;
+    }
+
+    header div.logo {
+        padding: 4vh;
+        font-size: 1.3em;
+        font-weight: bold;
+    }
+
+    main,
+    header,
+    footer {
+        background-color: #504BE5;
+    }
+
+    main div.home {
+        height: 25vh;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column;
+        padding-left: 6vw;
+        padding-right: 6vw;
+        color: white;
+    }
+
+    main div.home h1 {
+        font-size: 1.8em;
+        font-weight: 900;
+    }
+
+    main div.home p {
+        color: white;
+        font-size: 0.7 em;
+        font-weight: 400;
+    }
+
+    main div.survey-box {
+        width: 100vw;
+        height: 70vh;
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    main div.survey-box div.survey {
+        width: 50vw;
+        height: 50vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 20px;
+        background-color: white;
+        border: 1px solid lightgray;
+        border-radius: 10px;
+        font-size: 0.9em;
+    }
+
+    main div.survey-box div.survey div.input {
+        padding: 10px;
+    }
+
+    main div.survey-box div.survey input {
+        width: 100%;
+        border: none;
+        border-bottom: 0.5px solid rgb(238, 238, 238);
+        padding: 5px;
+    }
+
+    main div.survey-box div.survey div.gender {
+        display: flex;
+        width: 100%;
+        font-size: 0.8em;
+        padding: 5px;
+    }
+
+    main div.survey-box div.survey div.slider-box {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-content: center;
+        justify-content: center;
+        padding: 5px;
+    }
+
+    main div.survey-box div.survey div.slider-box .slider-value {
+        color: #d3d3d3;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    main div.survey-box div.survey div.slider-box .slider {
+        -webkit-appearance: none;
+        width: 99%;
+        height: 10px;
+        background: #d3d3d3;
+        outline: none;
+        opacity: 0.7;
+        -webkit-transition: .2s;
+        transition: opacity .2s;
+    }
+
+    main div.survey-box div.survey div.slider-box .slider:hover {
+        opacity: 1;
+    }
+
+    main div.survey-box div.survey div.slider-box .slider::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 10px;
+        height: 10px;
+        background: rgb(238, 238, 238);
+        cursor: pointer;
+    }
+
+    main div.survey-box div.survey div.slider-box .slider::-moz-range-thumb {
+        width: 10px;
+        height: 10px;
+        background: rgb(238, 238, 238);
+        cursor: pointer;
+    }
+
+    main div.survey-box div.survey textarea {
+        border: 0.5px solid rgb(238, 238, 238);
+        border-radius: 5px;
+    }
+
+    main div.survey-box div.survey button {
+        border: none;
+        width: 55%;
+        padding: 10px;
+        background-color: white;
+        font-size: 1em;
+        border: 0.8px solid #504BE5;
+        color: #504BE5;
+        border-radius: 35px;
+    }
+
+    main div.survey-box div.survey button:hover {
+        background-color: #504BE5;
+        color: white;
+        transition: background-color 1s;
+    }
+
+    footer {
+        width: 100%;
+        height: 20vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    footer div {
+        padding: 5px;
+        font-size: 1.5em;
+    }
+
+    footer div.links ol {
+        display: flex;
+        width: 60vw;
+        justify-content: space-evenly;
+    }
+
+    footer div.links ol a {
+        color: white;
+    }
+
+    footer div.links ol a:hover {
+        color: black;
+    }
+}
+
+/* MOBILE PART */
 @media only screen and (max-width: 768px) {
 
     header {
@@ -241,9 +427,6 @@
         font-weight: bold;
     }
 
-    nav {
-        display: none;
-    }
 
     main,
     header,
