--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -285,6 +285,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         padding: 20px;
         background-color: white;
         border: 1px solid lightgray;
@@ -468,6 +469,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         padding: 20px;
         background-color: white;
         border: 1px solid lightgray;
